--- a/src/api/server/appsettings.Development.json
+++ b/src/api/server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "DatabaseOptions": {
-    "Provider": "postgresql",
+    "Provider": "mssql"
   },
   "OriginOptions": {
     "OriginUrl": "https://localhost:7000"
