--- a/src/api/server/appsettings.json
+++ b/src/api/server/appsettings.json
@@ -1,7 +1,9 @@
 {
   "DatabaseOptions": {
-    "Provider": "postgresql",
-    "ConnectionString": "Server=localhost;Database=fullstackhero;Port=5433;User Id=pgadmin;Password=pgadmin;"
+    //"Provider": "postgresql",
+    //"ConnectionString": "Server=localhost;Database=fullstackhero;Port=5433;User Id=pgadmin;Password=pgadmin;"
+    "Provider": "mssql",
+    "ConnectionString": "Server=DESKTOP-SR0UATC;Database=fullstackhero;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=false;"
   },
   "OriginOptions": {
     "OriginUrl": "https://localhost:7000"
