--- a/src/api/framework/Infrastructure/Infrastructure.csproj
+++ b/src/api/framework/Infrastructure/Infrastructure.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Finbuckle.MultiTenant.EntityFrameworkCore" />
     <PackageReference Include="Hangfire" />
     <PackageReference Include="Hangfire.MemoryStorage" />
+    <PackageReference Include="Hangfire.MySqlStorage" />
     <PackageReference Include="Hangfire.PostgreSql" />
     <PackageReference Include="MailKit" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
@@ -31,6 +32,7 @@
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" />
     <PackageReference Include="MimeKit" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
   </ItemGroup>  
   <ItemGroup>
     <PackageReference Include="Serilog" />
