--- a/src/api/server/appsettings.json
+++ b/src/api/server/appsettings.json
@@ -2,8 +2,10 @@
   "DatabaseOptions": {
     //"Provider": "postgresql",
     //"ConnectionString": "Server=localhost;Database=fullstackhero;Port=5433;User Id=pgadmin;Password=pgadmin;"
-    "Provider": "mssql",
-    "ConnectionString": "Server=DESKTOP-SR0UATC;Database=fullstackhero;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=false;"
+    //"Provider": "mssql",
+    //"ConnectionString": "Server=DESKTOP-SR0UATC;Database=fullstackhero;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=false;"
+    "Provider": "mysql",
+    "ConnectionString": "server=192.168.30.68;user=root;password=root;database=db_ANPR_Portal_Blazor;"
   },
   "OriginOptions": {
     "OriginUrl": "https://localhost:7000"
