--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       ASPNETCORE_ENVIRONMENT: docker
       ASPNETCORE_URLS: https://+:7000;http://+:5000
       ASPNETCORE_HTTPS_PORT: 7000
-      ASPNETCORE_Kestrel__Certificates__Default__Password: password!
+      ASPNETCORE_Kestrel__Certificates__Default__Password: 123
       ASPNETCORE_Kestrel__Certificates__Default__Path: /https/cert.pfx
       DatabaseOptions__ConnectionString: Server=postgres;Port=5433;Database=fullstackhero;User Id=pgadmin;Password=pgadmin
       DatabaseOptions__Provider: postgresql
